tests/cases/fail/variadic_function_definition.c
int logmsg(char *fmt, ...) {
  return 0;
}

int main() {
  return 0;
}
